<android.support.constraint.ConstraintLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:background="@android:color/white"
    tools:context="com.example.cecil.database2.MainActivity">

    <TextView
        android:id="@+id/txt_titel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/home_titel"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bn_add_mad"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="90dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="?android:attr/colorBackground"
        android:text="@string/add_mad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bn_view_mad"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="?android:attr/colorBackground"
        android:text="@string/Read_mad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bn_add_mad" />


    <Button
        android:id="@+id/bn_update_mad"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="?android:attr/colorBackground"
        android:text="@string/Update_mad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bn_view_mad" />

    <Button
        android:id="@+id/bn_info"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="?android:attr/colorBackground"
        android:text="@string/Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bn_update_mad" />

    <Button
        android:id="@+id/bn_logud"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="?android:attr/colorBackground"
        android:text="@string/log_ud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bn_info" />

</android.support.constraint.ConstraintLayout>


