<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".Info">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/Info_titel"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/Sense_tekst"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toBottomOf="@+id/txt_info" />

        <Button
            android:id="@+id/bn_play"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="?attr/colorButtonNormal"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="?android:attr/colorBackground"
            android:text="@string/Afspil_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view" />


        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtube_player_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/bn_play" />


        <Button
            android:id="@+id/bn_play1"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="?attr/colorButtonNormal"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="?android:attr/colorBackground"
            android:text="@string/Afspil_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view1" />


        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtube_player_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/bn_play1" />


        <Button
            android:id="@+id/bn_play2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="?attr/colorButtonNormal"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="?android:attr/colorBackground"
            android:text="@string/Afspil_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view2" />


        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/youtube_player_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/bn_play2" />


        <Button
            android:id="@+id/bn_play3"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="?attr/colorButtonNormal"
            android:backgroundTint="@android:color/holo_green_dark"
            android:textColor="?android:attr/colorBackground"
            android:text="@string/Afspil_video"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/youtube_player_view3" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>